<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/layout_margin">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/detail_image_width"
        android:layout_height="@dimen/detail_image_height"
        android:background="@color/gray_95"
        android:contentDescription="@string/item_image_desc"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/detail_table_margin"
        android:scaleType="centerCrop" />

    <TableLayout
        android:id="@+id/table_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_marginLeft="@dimen/detail_table_margin"
        android:layout_marginRight="@dimen/detail_table_margin">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/textView_type_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_type" />
            <TextView
                android:id="@+id/textView_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_type" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/textView_tags_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_tags" />
            <TextView
                android:id="@+id/textView_tags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_tags" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/textView_views_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_views" />
            <TextView
                android:id="@+id/textView_views"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_views" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                android:id="@+id/textView_downloads_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_downloads" />
            <TextView
                android:id="@+id/textView_downloads"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_downloads" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                android:id="@+id/textView_favorites_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_favorites" />
            <TextView
                android:id="@+id/textView_favorites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_favorites" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                android:id="@+id/textView_likes_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_likes" />
            <TextView
                android:id="@+id/textView_likes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_likes" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                android:id="@+id/textView_comments_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_comments" />
            <TextView
                android:id="@+id/textView_comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_comments" />
        </TableRow>
    </TableLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/table_info"
        android:layout_margin="@dimen/detail_table_margin"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:orientation="vertical">
            <Button
                android:id="@+id/button_previewURL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_color"
                android:textAllCaps="false"
                android:text="@string/title_previewURL" />
            <TextView
                android:id="@+id/textView_previewURL_dimension"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_previewURL" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:orientation="vertical">
            <Button
                android:id="@+id/button_webformatURL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_color"
                android:textAllCaps="false"
                android:text="@string/title_webformatURL" />
            <TextView
                android:id="@+id/textView_webformatURL_dimension"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_webformatURL" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:orientation="vertical">
            <Button
                android:id="@+id/button_imageURL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_color"
                android:textAllCaps="false"
                android:text="@string/title_imageURL" />
            <TextView
                android:id="@+id/textView_imageURL_dimension"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_imageURL" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>