<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="@dimen/keyword_width"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/layout_margin"
                    android:text="@string/search_title_keyword" />

                <EditText
                    android:id="@+id/search_keyword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/layout_margin"
                    android:background="@color/colorAccent"
                    android:hint="@string/search_hint"
                    android:inputType="text"
                    android:textSize="@dimen/search_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/search_order_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/layout_margin"
                    android:text="@string/search_title_order" />

                <Spinner
                    android:id="@+id/order_list_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/order_list"
                    android:spinnerMode="dropdown"
                    android:background="@color/colorAccent"
                    android:textSize="@dimen/search_text_size" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/layout_margin"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <Button
                android:id="@+id/reload_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_color"
                android:drawableStart="@drawable/reload_30"
                android:text="@string/search_reload" />
        </RelativeLayout>
    </RelativeLayout>

    <GridView
        android:id="@+id/gridview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnWidth="@dimen/item_image_width"
        android:minHeight="190dp"
        android:numColumns="2"
        android:verticalSpacing="@dimen/grid_spacing"
        android:horizontalSpacing="@dimen/grid_spacing"
        android:stretchMode="columnWidth"
        android:gravity="center"/>

</LinearLayout>